--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,7 @@ Evolution is awesome.
 As shown in Figure~\ref{fig:darwin}, Charles Darwin rocked hard---really hard.
 This finding is used to prove Proposition~\ref{prop:evo}.
 
+% WSD: DALLE image generation inspired by Andy Kern's tweet https://twitter.com/pastramimachine/status/1536354513627381760?s=20&t=NGXiPZuz9rHWdMvJpMoCrw
 \begin{figure}[h]
  \centering
  \includegraphics[width=0.3\textwidth]{darwin-rock}
