use figures directory to be consistent with gitignore

--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,7 @@ This finding is used to prove Proposition~\ref{prop:evo}.
 % WSD: DALLE image generation inspired by Andy Kern's tweet https://twitter.com/pastramimachine/status/1536354513627381760?s=20&t=NGXiPZuz9rHWdMvJpMoCrw
 \begin{figure}[h]
  \centering
- \includegraphics[width=0.3\textwidth]{darwin-rock}
+ \includegraphics[width=0.3\textwidth]{figures/darwin-rock}
  \caption{Archival photograph of Charles Darwin playing his electric guitar.}
  \label{fig:darwin}
 \end{figure}
