--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@ Evolution is awesome.
 \section*{Results}\label{sec:results}
 
 As shown in Figure~\ref{fig:darwin}, Charles Darwin rocked hard---really hard.
-This finding is used to prove Proposition~\ref{prop:evo}.
+We use this finding to prove Proposition~\ref{prop:evo}.
 
 % WSD: DALLE image generation inspired by Andy Kern's tweet https://twitter.com/pastramimachine/status/1536354513627381760?s=20&t=NGXiPZuz9rHWdMvJpMoCrw
 \begin{figure}[h]
